// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`region encoding encode multiple and complex region 1`] = `
[
  {
    "end": 100,
    "start": 1,
  },
  {
    "end": 20,
    "start": 1,
  },
  {
    "end": 100,
    "start": 30,
  },
  {
    "end": 100,
    "start": 50,
  },
  {
    "end": 100,
    "start": 1,
  },
  {
    "end": 100,
    "start": 1,
  },
]
`;

exports[`region encoding encode multiple region 1`] = `
[
  {
    "end": 5,
    "start": 1,
  },
  {
    "end": 20,
    "start": 10,
  },
  {
    "end": 50,
    "start": 30,
  },
  {
    "end": 100,
    "start": 50,
  },
]
`;

exports[`region encoding encode simple region 1`] = `
[
  {
    "end": 10,
    "start": 2,
  },
]
`;

exports[`region encoding encode whole region 1`] = `
[
  {
    "end": Infinity,
    "start": -Infinity,
  },
]
`;
